optimize commands