@@ -1,14 +1,15 @@
-package com.github.assemblyorg.keepInventory.commands.keepInventoryCommand.subcommands;
+package com.github.assemblyorg.keepInventory.commands.keepInventoryCommand.subCommands.actionSubCommands;
 
+import com.github.assemblyorg.keepInventory.commands.keepInventoryCommand.subCommands.SubCommand;
 import com.github.assemblyorg.keepInventory.configs.ConfigManager;
 import com.github.assemblyorg.keepInventory.utils.StateToggle;
 import com.github.assemblyorg.keepInventory.utils.UtilManager;
 import com.mojang.brigadier.builder.ArgumentBuilder;
 import io.papermc.paper.command.brigadier.CommandSourceStack;
+import io.papermc.paper.command.brigadier.Commands;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.jspecify.annotations.NonNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class OnSubCommand implements SubCommand {
@@ -24,8 +25,10 @@ public class OnSubCommand implements SubCommand {
     }
 
     @Override
-    public @NonNull List<ArgumentBuilder<CommandSourceStack, ?>> argumentBuilder() {
-        return Collections.emptyList();
+    public @NonNull List<ArgumentBuilder<CommandSourceStack, ?>> argument() {
+        return List.of(
+                Commands.literal("on")
+        );
     }
 
 }
